--- a/style/admin.css
+++ b/style/admin.css
@@ -3,4 +3,8 @@
     flex-direction: column;
     width: 40%;
     margin: 20px 10px;
+    background-color: rgb(180, 116, 240);
+    gap: 10px;
+    margin: 30px 40px;
+    
 }
