--- a/style/admin.css
+++ b/style/admin.css
@@ -6,5 +6,7 @@
     background-color: rgb(180, 116, 240);
     gap: 10px;
     margin: 30px 40px;
+    border-radius: 10px;
+        padding: 10px;
     
 }
