--- a/style/index.css
+++ b/style/index.css
@@ -20,4 +20,8 @@
     flex-direction: column;
     width: 40%;
     margin: 20px 10px;
+    background-color: rgb(172, 96, 243);
+    gap: 20px;
+    border-radius: 10px;
+    padding: 10px;
 }
